# aurora-softcpu

./: .gitattributes  .gitignore  CMakeLists.txt  Demo_Fibonacci.mov  Makefile  README.md
docs/: architecture.md  assembler.md  emulator.md  programs.md
include/aurora/: alu.hpp  assembler.hpp  bus.hpp  common.hpp  control_unit.hpp  cpu.hpp  device.hpp  emulator.hpp  instruction.hpp  memory.hpp  utils.hpp
include/softcpu/: alu.hpp  assembler.hpp  bus.hpp  common.hpp  control_unit.hpp  cpu.hpp  device.hpp  emulator.hpp  instruction.hpp  memory.hpp  utils.hpp
programs/: fibonacci.asm  hello.asm  timer.asm
report/: aurora_report.tex  softcpu_report.tex
src/: alu.cpp  assembler.cpp  bus.cpp  control_unit.cpp  cpu.cpp  devices.cpp  emulator.cpp  main.cpp  memory.cpp  utils.cpp
